tests/k8s_testcases/network-policy-checks-bad-path/ipblock_cidr_wrong_type.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: ipblock-fields-test-type
  namespace: kube-system
spec:
  podSelector:
    matchLabels:
      tier: frontend
  policyTypes:
  - Ingress
  ingress:
    - from:
      - ipBlock:
          # wrong type
          cidr:
           - 10.0.0.0/24
      ports:
        - port: 53
          protocol: UDP
